syntax = "proto3";

package rivet.backend.pkg.team.get;

import "resources/legacy/proto/common.proto";
import "resources/legacy/proto/backend/team.proto";

message Request {
	repeated rivet.common.Uuid team_ids = 1;
}

message Response {
	repeated rivet.backend.team.Team teams = 1;
}
